claude one-shot

--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>aster-void | Developer</title>
+		<meta name="description" content="コードを書き、システムを創る。技術の深淵を探求し、未知の可能性を形にする開発者。" />
+		<meta name="keywords" content="aster-void, developer, rust, typescript, nix, devops" />
+		<meta property="og:title" content="aster-void | Developer" />
+		<meta property="og:description" content="コードを書き、システムを創る。技術の深淵を探求し、未知の可能性を形にする開発者。" />
+		<meta property="og:type" content="website" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="aster-void | Developer" />
+		<meta name="twitter:description" content="コードを書き、システムを創る。技術の深淵を探求し、未知の可能性を形にする開発者。" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
